Don't use deprecated constructor